Fix body overflow (had .container on the same div as .island--hero instead of a nested div)

--- a/site/assets/sass/_l-mobile.scss
+++ b/site/assets/sass/_l-mobile.scss
@@ -1,4 +1,11 @@
 @import "global-variables";
+
+.overflow-x-hidden {
+	width: 100%;
+	overflow-x: hidden;
+
+}
+
 html {
 	box-sizing: border-box;
 }
@@ -9,9 +16,8 @@ html {
 hr {
 	margin: 1;
 }
-
-body {
-	overflow-x: hidden;
+body, html {
+	overflow-x: hidden ;
 }
 /*=====Objects=====*/
 .section {
@@ -34,12 +40,11 @@ body {
 	position: absolute;
 	z-index: 1;
 	bottom: 12% ;
-	left: 7.5%;
+	left: 0%;
 	padding: 1.5rem 0;
 	h5 {
 		margin-left: -1rem;
 		margin-bottom: 0rem;
-		width: 110%;
 		text-align: justify;
 	}
 	hr {
