--- a/site/assets/style/main.css
+++ b/site/assets/style/main.css
@@ -670,82 +670,87 @@ there.
 /* Larger than desktop */
 /* Larger than Desktop HD */
 /*\______VERTICAL RHYTHM________\*/
-/* line 2, ../sass/_l-mobile.scss */
+/* line 3, ../sass/_l-mobile.scss */
+.overflow-x-hidden {
+  width: 100%;
+  overflow-x: hidden;
+}
+
+/* line 9, ../sass/_l-mobile.scss */
 html {
   box-sizing: border-box;
 }
 
-/* line 5, ../sass/_l-mobile.scss */
+/* line 12, ../sass/_l-mobile.scss */
 *, *:before, *:after {
   box-sizing: inherit;
 }
 
 /*TODO*/
-/* line 9, ../sass/_l-mobile.scss */
+/* line 16, ../sass/_l-mobile.scss */
 hr {
   margin: 1;
 }
 
-/* line 13, ../sass/_l-mobile.scss */
-body {
+/* line 19, ../sass/_l-mobile.scss */
+body, html {
   overflow-x: hidden;
 }
 
 /*=====Objects=====*/
-/* line 17, ../sass/_l-mobile.scss */
+/* line 23, ../sass/_l-mobile.scss */
 .section {
   padding: 0;
 }
 
-/* line 21, ../sass/_l-mobile.scss */
+/* line 27, ../sass/_l-mobile.scss */
 .banner > p {
   margin-bottom: 0;
   padding-top: 0.6rem;
 }
 
-/* line 24, ../sass/_l-mobile.scss */
+/* line 30, ../sass/_l-mobile.scss */
 .banner--img {
   padding: 1.2rem 0;
 }
 
-/* line 27, ../sass/_l-mobile.scss */
+/* line 33, ../sass/_l-mobile.scss */
 .hero {
   background: url("../img/landing-mobile.jpg") no-repeat center center;
   background-size: cover;
   height: calc(100vh - 72px);
 }
 
-/* line 33, ../sass/_l-mobile.scss */
+/* line 39, ../sass/_l-mobile.scss */
 .island--hero {
   position: absolute;
   z-index: 1;
   bottom: 12%;
-  left: 7.5%;
+  left: 0%;
   padding: 1.5rem 0;
 }
-/* line 39, ../sass/_l-mobile.scss */
+/* line 45, ../sass/_l-mobile.scss */
 .island--hero h5 {
   margin-left: -1rem;
   margin-bottom: 0rem;
-  width: 110%;
   text-align: justify;
 }
-/* line 45, ../sass/_l-mobile.scss */
+/* line 50, ../sass/_l-mobile.scss */
 .island--hero hr {
   margin: 1.0rem 0;
 }
-/* line 48, ../sass/_l-mobile.scss */
+/* line 53, ../sass/_l-mobile.scss */
 .island--hero p {
   margin-top: 1rem;
   margin-bottom: 2rem;
 }
 
-/* line 53, ../sass/_l-mobile.scss */
+/* line 58, ../sass/_l-mobile.scss */
 #learn-more > img {
   border-radius: 50%;
 }
 
-/* line 56, ../sass/_l-mobile.scss */
+/* line 61, ../sass/_l-mobile.scss */
 .parallax {
   height: 420px;
   width: 100%;
@@ -754,28 +759,28 @@ body {
   height: 500px;
   width: 100%;
 }
-/* line 63, ../sass/_l-mobile.scss */
+/* line 68, ../sass/_l-mobile.scss */
 .parallax > .container {
   top: 20%;
 }
 
-/* line 67, ../sass/_l-mobile.scss */
+/* line 72, ../sass/_l-mobile.scss */
 .wrapper {
   position: relative;
 }
 
-/* line 70, ../sass/_l-mobile.scss */
+/* line 75, ../sass/_l-mobile.scss */
 .media, .circle {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-/* line 74, ../sass/_l-mobile.scss */
+/* line 79, ../sass/_l-mobile.scss */
 .media > p, .circle > p {
   margin: 0;
 }
 
-/* line 80, ../sass/_l-mobile.scss */
+/* line 85, ../sass/_l-mobile.scss */
 .card--tabbed {
   border-radius: 0 5px 5px 5px;
   border-radius: 5px;
@@ -784,7 +789,7 @@ body {
   margin-bottom: 3rem;
 }
 
-/* line 87, ../sass/_l-mobile.scss */
+/* line 92, ../sass/_l-mobile.scss */
 .tab {
   text-align: center;
   border-radius: 5px 5px 0 0;
@@ -794,116 +799,116 @@ body {
   padding-top: 0.5rem;
 }
 
-/* line 96, ../sass/_l-mobile.scss */
+/* line 101, ../sass/_l-mobile.scss */
 .mod--img > img {
   max-width: 100%;
 }
 
-/* line 100, ../sass/_l-mobile.scss */
+/* line 105, ../sass/_l-mobile.scss */
 .mod--text {
   text-align: center;
 }
 
-/* line 103, ../sass/_l-mobile.scss */
+/* line 108, ../sass/_l-mobile.scss */
 .mod--features {
   text-align: center;
   padding-top: 2.4rem;
   position: relative;
 }
 
-/* line 109, ../sass/_l-mobile.scss */
+/* line 114, ../sass/_l-mobile.scss */
 .price strong {
   font-size: 3.6rem;
 }
-/* line 112, ../sass/_l-mobile.scss */
+/* line 117, ../sass/_l-mobile.scss */
 .price sup {
   vertical-align: 2rem;
   font-size: 1.2rem;
 }
 
-/* line 118, ../sass/_l-mobile.scss */
+/* line 123, ../sass/_l-mobile.scss */
 #landing .island {
   left: calc(-4% - 20px);
   padding-left: calc(4% + 20px);
   top: 55%;
 }
 
-/* line 123, ../sass/_l-mobile.scss */
+/* line 128, ../sass/_l-mobile.scss */
 .section--header {
   margin: 3.6rem 0;
 }
-/* line 125, ../sass/_l-mobile.scss */
+/* line 130, ../sass/_l-mobile.scss */
 .section--header > h4 {
   margin-bottom: 0.6rem;
   text-align: center;
 }
-/* line 127, ../sass/_l-mobile.scss */
+/* line 132, ../sass/_l-mobile.scss */
 .section--header > img {
   margin: 0 auto 0.6rem auto;
 }
 
-/* line 130, ../sass/_l-mobile.scss */
+/* line 135, ../sass/_l-mobile.scss */
 .activity {
   position: relative;
   border-radius: 5px;
 }
-/* line 132, ../sass/_l-mobile.scss */
+/* line 137, ../sass/_l-mobile.scss */
 .activity > img {
   max-width: 100%;
   display: block;
 }
 
-/* line 136, ../sass/_l-mobile.scss */
+/* line 141, ../sass/_l-mobile.scss */
 .activity .island {
   position: absolute;
   height: 90px;
   bottom: 0px;
 }
 
-/* line 141, ../sass/_l-mobile.scss */
+/* line 146, ../sass/_l-mobile.scss */
 .bottom > img {
   height: 48px;
   width: auto;
 }
 
-/* line 145, ../sass/_l-mobile.scss */
+/* line 150, ../sass/_l-mobile.scss */
 #park {
   display: none;
 }
 
-/* line 148, ../sass/_l-mobile.scss */
+/* line 153, ../sass/_l-mobile.scss */
 #beach {
   display: none;
 }
 
-/* line 151, ../sass/_l-mobile.scss */
+/* line 156, ../sass/_l-mobile.scss */
 #tues {
   display: none;
 }
 
-/* line 154, ../sass/_l-mobile.scss */
+/* line 159, ../sass/_l-mobile.scss */
 #wed {
   display: none;
 }
 
 /*======POST======*/
-/* line 158, ../sass/_l-mobile.scss */
+/* line 163, ../sass/_l-mobile.scss */
 .post {
   text-align: justify;
   margin-bottom: 2.4rem;
 }
 
-/* line 163, ../sass/_l-mobile.scss */
+/* line 168, ../sass/_l-mobile.scss */
 .cal :first-child {
   text-align: right;
 }
 
-/* line 166, ../sass/_l-mobile.scss */
+/* line 171, ../sass/_l-mobile.scss */
 .cal {
   padding: 1.2rem 0;
 }
 
-/* line 170, ../sass/_l-mobile.scss */
+/* line 175, ../sass/_l-mobile.scss */
 .contact {
   text-align: center;
   padding-top: 3.6rem;
@@ -912,7 +917,7 @@ body {
   position: relative;
 }
 
-/* line 177, ../sass/_l-mobile.scss */
+/* line 182, ../sass/_l-mobile.scss */
 .circle {
   position: absolute;
   top: -3.6rem;
@@ -921,18 +926,18 @@ body {
   width: 72px;
   border-radius: 50%;
 }
-/* line 179, ../sass/_l-mobile.scss */
+/* line 184, ../sass/_l-mobile.scss */
 .circle img {
   max-height: 48px;
 }
 
-/* line 189, ../sass/_l-mobile.scss */
+/* line 194, ../sass/_l-mobile.scss */
 .copyright {
   margin-bottom: 0.5rem;
   font-size: 1.2rem;
 }
 
-/* line 193, ../sass/_l-mobile.scss */
+/* line 198, ../sass/_l-mobile.scss */
 hr {
   margin: 0.25rem;
 }
